# magic-webp

./: .augment-guidelines  .gitignore  .npmignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  THREAD_SAFETY.md  TODO.md  build.ps1  build.sh  package.json  pnpm-lock.yaml  test-native.ps1  tsconfig.build.json  tsconfig.json  vite-env.d.ts  vitest.config.ts  vitest.setup.ts
.github/workflows/: deploy.yml
demo/: index.html  main.ts  test-dimensions.html  test-emscripten.html  test-wasm.html  test-wasm.ts  vite.config.ts  worker.ts
pkg/: magic_webp.d.mts  magic_webp.d.mts.map  magic_webp.d.ts  magic_webp.js  magic_webp.mjs  magic_webp.wasm  package.json
scripts/: README.md  cargo.cmd  setup-emsdk.ps1  setup-emsdk.sh  verify-conversion.cjs  wasm-pack.cmd
src/: lib.rs
src-c/: animation.c  gifdec_stb.c  gifdec_stb.h  magic_webp.c
src-js/: concurrent.test.ts  convert.test.ts  frame-preservation.test.ts  index.ts  logger.ts  validation.test.ts  wasm-module.d.ts  wasm.test.ts  worker-client.ts  worker.ts
tests/: CMakeLists.txt  integration_test.rs  test_webp.c  test_webp.js
