[package]
name = "magic-webp"
version = "0.1.0"
edition = "2021"
description = "Browser image processing (crop & resize) via WebAssembly"
license = "MIT"

[lib]
# cdylib  — WASM output for the browser
# rlib    — needed so `tests/` integration tests can import the crate
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
image = { version = "0.25", default-features = false }
console_error_panic_hook = "0.1"

[dev-dependencies]
# webp — decode giphy.webp and encode test output back to .webp
image = { version = "0.25", default-features = false, features = ["webp"] }

[profile.release]
# Optimise for size — important for WASM bundles
opt-level = "z"
lto = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
webp-animation = "0.9.0"

